--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,7 +1,5 @@
 <div id="greyArea"></div>
-<div id="headerTop">
-    <span>011 4696-8156</span>
-</div>
+
 <header id="header"> 
 
     <div class="menuNavegacion">
@@ -16,6 +14,7 @@
                 <li><a href="#AboutUs">Sobre nosotros</a></li>
                 <li><a href="#Contacto">Contacto</a></li>
                 <li><a href="#Cotizador">Cotizador</a></li>
+                <button><span><i class="fa fa-whatsapp" ></i></span> Contactate con nosotros</button>
             </ul>
         </div>
         <div class="logo2Container" onClick="showDrawer()" id="logo2Container">
