--- a/public/stylesheets/carruseles.css
+++ b/public/stylesheets/carruseles.css
@@ -2,8 +2,7 @@
 
 .Carousel{
   width: 100%;
-  margin: 0%;
-  margin-top: 5%;
+  margin: 2% 0;
   text-align: center;
 }
 .Carousel h2, .Carousel h3{
