--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,7 @@
 <footer>
-  <div></div>
-  <div></div>
+
+  <span>+54 11 3420-9000</span>
+  <span>info@fernatex.com.ar</span>
+  <span>Lun. a vie. 9:00-16:00 </span>
+
 </footer>
