--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,7 +14,9 @@
                 <li><a href="#AboutUs">Sobre nosotros</a></li>
                 <li><a href="#Contacto">Contacto</a></li>
                 <li><a href="#Cotizador">Cotizador</a></li>
-                <button><span><i class="fa fa-whatsapp" ></i></span> Contactate con nosotros</button>
+                <a href="https://api.whatsapp.com/send?phone=541134209000">
+                    <button><span><i class="fa fa-whatsapp" ></i></span> Contactate con nosotros</button>
+                </a>
             </ul>
         </div>
         <div class="logo2Container" onClick="showDrawer()" id="logo2Container">
