--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es-AR" className='scroll-smooth' >
 <meta charset="UTF-8">
 <%- include('./partials/head') %>
 
@@ -14,47 +14,84 @@
             <p>En Fernatex día a día ponemos en funcionamiento nuestra empresa con el compromiso de lograr superarnos para brindar el mejor servicio y la mas alta calidad</p>
         </div>
         <!----- Estampados ----->
-        <img src="images/ui/solapa.svg" id="flapUp" onclick="enroll()">
+        <img src="images/ui/solapa.svg" id="flapUp" onclick="enroll(820)">
         <div class="body-container" id="body-container">
-            <div class="estampadosContainer" id="Estampados">
-                <div class="estampados">
-                    <h2>Desenrrolla nuestras ideas</h2>
+            <section  id="Estampados">
+                <div class="enroll">
+                    <h2>Desenrolla nuestras ideas</h2>
                 </div>
-            </div>
-            <!-----  FIN Estampados ----->
-            <!----- Inicio Carruceles ----->
-
-            <section class="Carousel">
+                <h1>Nuestros Estampados</h1>
                 
-                <!-- <img style="width: 100%;" src="images/ui/linea.png"> -->
-                <!-- Primer carrusel -->
-                <h3>Nuestros Estampados</h3>
-                <div class="carousel-categories">
-                    <!-- <span>categoria</span> -->
-                    <h2 onclick="ChangeSlickCategorie('Animales')" id="AnimalesCatBtn" class="clicked">Animales</h2>
-                    <h2 onclick="ChangeSlickCategorie('Rayados')" id="RayadosCatBtn">Rayados</h2>
-                    <h2 onclick="ChangeSlickCategorie('Infantiles')" id="InfantilesCatBtn">Infantil</h2>
-                </div>
-                <div class="slick-list" id="slick-list">
-                    <button class="slick-arrow slick-prev" id="button-prev" data-button="button-prev" onclick="app.processingButton(event)">
-                        <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="chevron-left" class="svg-inline--fa fa-chevron-left fa-w-10" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
-                            <path fill="currentColor" d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z"></path>
-                        </svg>
-                    </button>
-                    <div class="slick-track" id="track">
+                
+                <div class="estamapados-catalogo">
+                    <!-- <div class="estamapados-categories">
+                        <h3 onclick="scroolTo('Animales')">Animales</h3>
+                        <h3 onclick="scroolTo('Rayados')">Rayados</h3>
+                        <h3 onclick="scroolTo('Infantiles')">Infantil</h3>
+                    </div> -->
+                    <div class="estamapados-view" id="view-Animales">
+                        <div class="estamapados-categories">
+                            <h3 id='animalesCat' onclick="scroolTo('Animales')">Animales</h3>
+                        </div>
+                        <div class="listContainer">
 
-
+                            <div class="list">
+                                <img src="images/estampados/animal/1.jpg" alt="">
+                                <img src="images/estampados/animal/2.jpg" alt="">
+                                <img src="images/estampados/animal/3.jpg" alt="">
+                                <img src="images/estampados/animal/4.jpg" alt="">
+                                <img src="images/estampados/animal/5.jpg" alt="">
+                                <img src="images/estampados/animal/6.jpg" alt="">
+                                <img src="images/estampados/animal/7.jpg" alt="">
+                                <img src="images/estampados/animal/1.jpg" alt="">
+                            </div>
+                            <div class="ilustration animales">
+                            </div>
+                        </div>
                     </div>
-                    <button class="slick-arrow slick-next" id="button-next" data-button="button-next" onclick="app.processingButton(event)">
-                        <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="chevron-right" class="svg-inline--fa fa-chevron-right fa-w-10" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
-                            <path fill="currentColor" d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z"></path>
-                        </svg>
-                    </button>
-                </div>
+                    <div class="estamapados-view" id="view-Rayados">
+                        <div class="estamapados-categories">
+                            <h3 id='rayadosCat' onclick="scroolTo('Rayados')">Rayados</h3>
+                        </div>
+                        <div class="ilustration rayados">
 
-                <img class="linea" src="images/ui/linea.svg">
+                        </div>
+                        <div class="list">
+                            <img src="images/estampados/rayados/1.jpg" alt="">
+                            <img src="images/estampados/rayados/2.jpg" alt="">
+                            <img src="images/estampados/rayados/3.jpg" alt="">
+                            <img src="images/estampados/rayados/4.jpg" alt="">
+                            <img src="images/estampados/rayados/2.jpg" alt="">
+                            <img src="images/estampados/rayados/1.jpg" alt="">
+                            <img src="images/estampados/rayados/4.jpg" alt="">
+                            <img src="images/estampados/rayados/3.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="estamapados-view" id="view-Infantiles">
+                        <div class="estamapados-categories">
+                            <h3 id='infantileslesCat' onclick="scroolTo('Infantiles')">Infantiles</h3>
+                        </div>
+                        <div class="listContainer">
+                            <div class="list">
+                                <img src="images/estampados/infantil/1.jpg" alt="">
+                                <img src="images/estampados/infantil/2.jpg" alt="">
+                                <img src="images/estampados/infantil/3.jpg" alt="">
+                                <img src="images/estampados/infantil/4.jpg" alt="">
+                                <img src="images/estampados/infantil/5.jpg" alt="">
+                                <img src="images/estampados/infantil/6.jpg" alt="">
+                                <img src="images/estampados/infantil/7.jpg" alt="">
+                                <img src="images/estampados/infantil/8.jpg" alt="">
+                            </div>
+                            <div class="ilustration infantiles">
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
             </section>
+
+
+            <img class="linea" src="images/ui/linea.svg">
             <!----- FIN Carruseles ----->
 
 
@@ -91,6 +128,35 @@
                     </div>
                 </section>
                 <!----- FIN About  ----->
+                <img class="linea" src="images/ui/linea.svg">
+
+                <section class="Carousel">
+                    <h3>Mas Estampados</h3>
+                    <div class="carousel-categories">
+                        <!-- <span>categoria</span> -->
+                        <h2 onclick="ChangeSlickCategorie('Animales')" id="AnimalesCatBtn" class="clicked">Animales</h2>
+                        <h2 onclick="ChangeSlickCategorie('Rayados')" id="RayadosCatBtn">Rayados</h2>
+                        <h2 onclick="ChangeSlickCategorie('Infantiles')" id="InfantilesCatBtn">Infantil</h2>
+                    </div>
+                    <div class="slick-list" id="slick-list">
+                        <button class="slick-arrow slick-prev" id="button-prev" data-button="button-prev" onclick="app.processingButton(event)">
+                            <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="chevron-left" class="svg-inline--fa fa-chevron-left fa-w-10" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+                                <path fill="currentColor" d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z"></path>
+                            </svg>
+                        </button>
+                        <div class="slick-track" id="track">
+    
+    
+                        </div>
+                        <button class="slick-arrow slick-next" id="button-next" data-button="button-next" onclick="app.processingButton(event)">
+                            <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="chevron-right" class="svg-inline--fa fa-chevron-right fa-w-10" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+                                <path fill="currentColor" d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z"></path>
+                            </svg>
+                        </button>
+                    </div>
+    
+                    
+                </section>
                 <img class="linea" src="images/ui/linea.svg">
                 
                 <!----- Cotizador Home ----->
@@ -194,13 +260,13 @@
                             <div class="socialBox">
                                 <div class="iconsContainer">
                                     <li class="icon whatsapp">
-                                        <span><i class="fa fa-whatsapp" ></i></span>
+                                        <span><a href="https://api.whatsapp.com/send?phone=541134209000""><i class="fa fa-whatsapp" ></i></a></span>
                                     </li>
                                     <li class="icon facebook">
-                                        <span><i class="fab fa-facebook-f" ></i></span>
+                                        <span><a href="https://www.facebook.com/JPpigmento/"><i class="fab fa-facebook-f" ></i></a></span>
                                     </li>
                                     <li class="icon instagram">
-                                        <span><i class="fa fa-instagram" ></i></span>
+                                        <span><a href="https://www.instagram.com/fernatex_srl/?hl=en"><i class="fa fa-instagram" ></i></a></span>
                                     </li>
                                     
                                 </div>
@@ -211,10 +277,11 @@
                 <!----- FIN Newsletter  ----->
                     
 
-        </div>
-    </main>
-</body>
-<%- include('./partials/footer') %>
+                <%- include('./partials/footer') %>
+            </div>
+            <div id="suriSlug"><h4>Desarrolado por <a href="">Suri.it</a> </h4></div>
+        </main>
+    </body>
 <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
 <script src="js/index.js"></script>
 <script src="js/slider.js"></script>
