--- a/views/home.ejs
+++ b/views/home.ejs
@@ -252,7 +252,7 @@
                         </div>
 
                         <div class="newsletterBox">
-                            <form action="action" method="POST">
+                            <form action="" method="POST" >
                                 <label>Dejanos tu email</label>
                                 <input type="text" name="email">
                                 <button type="submit" class="button2" style="vertical-align:middle">Enviar</button>
