--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
     <meta charset="UTF-8">
 <head>
-    <link rel="shortcut icon" href="/public/images/ui/Icono_tela.png">
+    <link rel="shortcut icon" href="images/ui/logoRollo.svg">
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel='stylesheet' href='/stylesheets/logosMarcas.css' />
     <link rel='stylesheet' href='/stylesheets/carruseles.css' />
     <link rel="stylesheet" href="path-to-the-file/splide.min.css">
     <link rel="stylesheet" href="url-to-cdn/splide.min.css">    
-    
     <meta name="viewport" content="initial-scale=1">
      <!----- CDN Carrusel  ----->
 
