--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,7 +5,7 @@
     <div class="menuNavegacion">
         
         <div class="logo-header">
-            <a href="/" class="logo nav-link"><img src="/images/ui/logo_blanco.png" alt="Fernatex-logo" class="image-logo"></a>
+            <a href="/" class="logo"><img src="/images/ui/logo_blanco.png" alt="Fernatex-logo" class="image-logo"></a>
         </div>
         <!-- Menu de navegacion  -->
         <div class="menu">
@@ -14,7 +14,10 @@
                 <li><a href="#AboutUs">Sobre nosotros</a></li>
                 <li><a href="#Contacto">Contacto</a></li>
                 <li><a href="#Cotizador">Cotizador</a></li>
-                <a href="https://api.whatsapp.com/send?phone=541134209000">
+                <a href="/" class="homeBtn">
+                    <button><span><i class="" ></i></span>  <strong>&#8592;</strong> Volver al Home</button>
+                </a>
+                <a href="https://api.whatsapp.com/send?phone=541134209000" class="wspBtn">
                     <button><span><i class="fa fa-whatsapp" ></i></span> Contactate con nosotros</button>
                 </a>
             </ul>
